Fixed design broken in last commit, properly implemented custom urls, optimized and cleaned

--- a/style.css
+++ b/style.css
@@ -1,16 +1,13 @@
 body{background:#444;}
 .top, .top a {
-	font-family: 'Open Sans', sans-serif; font-weight: 600; height: 110px; text-align: center;
-	animation: fadein .5s; -moz-animation: fadein .5s; -webkit-animation: fadein .5s; -o-animation: fadein .5s;
+    font-family: 'Open Sans', sans-serif; font-weight: 600; text-align: center; 
+    animation: fadein .5s; -moz-animation: fadein .5s; -webkit-animation: fadein .5s; -o-animation: fadein .5s;
 }
-.vcent{ position: relative; top: 50%; transform: translateY(-50%);}
-.face{margin-top: -60px; padding-bottom: 40px; font-size: 200px; word-spacing: 60px;}
+.top div{color:#ed207f;}
+.vcent{position: relative; top: 50%; transform: translateY(-50%);}
+.face{line-height: 1; font-size: 29vw; word-spacing: 60px; margin-top: -7%;}
 .innbox, .innbox a{width:80%; height: 50px; font-family: 'Open Sans', sans-serif; font-size: 25px; color:#f15; text-align: center;}
 .small, .small a{font-size: 5vw; color:#E2E2E2; display:block !important; text-decoration: none;}
 .small a:hover{color:#ed207f;}
 
-
-@keyframes fadein {from { opacity:0;} to { opacity:1;}}
-@-moz-keyframes fadein {from {opacity:0;} to {opacity:1;}}
-@-webkit-keyframes fadein {from { opacity:0;} to { opacity:1; }}
-@-o-keyframes fadein {from { opacity:0; } to {opacity: 1;}}
+@-webkit-keyframes fadein{from {opacity:0;}to{opacity:1;}}@keyframes fadein{from{opacity:0;}to{opacity:1;}}@-moz-keyframes fadein{from{opacity:0;}to{opacity:1;}}@-o-keyframes fadein{from{opacity:0;}to{opacity:1;}}
